Fixed automatic browser dark mode and changed node package version on ts

--- a/frontend-isolated/src/index.css
+++ b/frontend-isolated/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: light only !important;
+}
+
+* {
+  color-scheme: only light;
+}
+
 html, body {
   color-scheme: light;
   height: 100%; /* Full height for both html and body */
